--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>market-cms</artifactId>
 	<name>cms</name>
 	<packaging>jar</packaging>
-	<version>1.0.16</version>
+	<version>1.0.17</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -66,6 +66,11 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.8.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
